--- a/WindowsFormsApp1/Properties/Resources.resx
+++ b/WindowsFormsApp1/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="tongi_raw" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\media\tongi_raw.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="tongi_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\media\tongi_1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
